remove blank authors